# testing

./: .env.example  Makefile  README.md
go/: .gitignore  go.mod  go.sum  main.go
java/: build.gradle
java/src/main/java/com/logbull/test/: TestApplication.java
java/src/main/java/com/logbull/test/config/: StandaloneLogBullConfig.java
java/src/main/java/com/logbull/test/controller/: LogDemoController.java
java/src/main/java/com/logbull/test/service/: StandaloneLoggerService.java
java/src/main/resources/: application.properties.example
java/src/test/java/com/logbull/test/: StandaloneLogBullIntegrationTests.java  TestApplicationTests.java
js/: .gitignore  main.js  package-lock.json  package.json
net/: .gitignore  LogBullTest.csproj  Program.cs  README.md
php/: .gitignore  README.md  composer.json  main.php  phpunit.xml
php/laravel/: .env.example  composer.json  phpunit.xml  test-logbull-channel.php  test-logbull-direct.php
php/laravel/app/Console/Commands/: TestLogBullCommand.php
php/laravel/config/: app.php  logging.php
php/laravel/routes/: web.php
php/laravel/tests/Feature/: LogBullChannelTest.php
php/tests/: LogBullIntegrationTest.php
python/: main.py  pyproject.toml
